0.8.5
-----
1. Fix missing repeat-single icon in desktop queue view.
2. Display "current / total" in now-playing.
3. Add mini-player.
4. Only show technical if in desktop bottombar if not showing ratings, or screen
   width is 900px or higher.
5. Reduce CPU load when the server connection is lost, or there are no players,
   by using icons and not a circular spinning progressbar.
6. When getting track, artist, album, etc. info, also pass URL (if known).
7. Don't repeatedly poll player status if song duration is 0 (as is for
   streams).

0.8.4
-----
 1. When creating jumplist for folders list, convert to uppercase.
 2. Remove list/grid toggle for image view.
 3. Fix adding albums and playlists to favourites.
 4. Remove parsing of title into tracknum+title.
 5. For mobile layout, place 'Add URL' and 'Scroll to current track' in menu if
    width is less than 500px.
 6. For mobile layout, place 'Random' and 'Shuffle' icons in queue toolbar if
    width is more than 320px.
 7. Add icons to standard settings menu entries, and now-playing context menu.
 8. Reduce margins in sleep dialog, to allow more space for text.
 9. Add option to show menu icons or not.
10. Add more server information to "Information" dialog.
11. Only update rating upon click.
12. Show time in tooltip when hover over progressbar (desktop browsers only).
13. Double-click now-playing image to show zoomed image.
14. Show now-playing image context menu on single click. Mobile browses only, as
    its an iOS work-around.

0.8.3
-----
1. Fix parsing of queue items' durations - and showing of total duration.
2. Fix elliding of toolbar text.
3. Fix zoomed image sizes when viewing artist pictures.

0.8.2
-----
 1. If queue page contains all tracks, then iterate these to determine total
    duration.
 2. When getting track lists (for albums, or queue) only request rating if
    rating support is enabled (via TrackStat).
 3. When drawing letter overlay, need to reduce item height for position