@@ -7,7 +7,9 @@
    width is 900px or higher.
 5. Reduce CPU load when the server connection is lost, or there are no players,
    by using icons and not a circular spinning progressbar.
-6. When getting track, artist, album, etc. info, also pass URL (if known).
+6. When getting track info for a queue item, pass its position in the queue to
+   the trackinfo command and not its ID/URL. This helps with TuneIn stations,
+   where the URL in the queue can change.
 7. Don't repeatedly poll player status if song duration is 0 (as is for
    streams).
 
